--- a/gst-plugins-good/ChangeLog
+++ b/gst-plugins-good/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-07  Richard Boulton <richard@tartarus.org>
+
+	* LICENSE_readme: Mention that synaesthesia is derived from GPL
+	  code.
+
 2002-06-03  Richard Boulton <richard@tartarus.org>
 
 	* m4/mpeg2dec.m4: Test for cpuaccel library as well as mpeg2dec
