--- a/gstreamer/TODO
+++ b/gstreamer/TODO
@@ -15,7 +15,7 @@ target release ! description
                ! flags and formats. more ideas in docs/random/wtay/query_events
 	       !  (API: medium dificulty)
 	       !
-    ?          ! add event for segment playback/looping and seeking (docs/random/wtay/segments)
+  0.4.1        ! add event for segment playback/looping and seeking (docs/random/wtay/segments)
     	       !  (API: medium dificulty, plugins: HARD to very HARD)
 	       !
     ?          ! add event to adjust rate (reverse playback, slow motion, frame skipping)
@@ -46,7 +46,7 @@ target release ! description
 shortterm core feature enhancements
 -----------------------------------
 
-    ?	       ! Implement PAD_DISABLED. This requires simple checks in the scheduler so that
+   0.4.1       ! Implement PAD_DISABLED. This requires simple checks in the scheduler so that
                ! it doesn't try to pull/push data from/to a disabled pad.
 	       ! When an element goes to the PAUSED state, all of its pads should be disabled. 
 	       ! This should also work for ghostpads.
