Fixup dvdnav plugin.
Original commit message from CVS:
Fixup dvdnav plugin.
Merge .h into .c.
Event handling patch and fixups from Cameron Hutchison <camh@xdna.net>.

--- a/gst-plugins-bad/AUTHORS
+++ b/gst-plugins-bad/AUTHORS
@@ -12,3 +12,4 @@ Bastien Nocera <hadess@hadess.net>
 Christian Fredrik Kalager Schaller <Uraeus@linuxrising.org>
 Thomas Vander Stichele <thomas@apestaart.org>
 Andy Wingo <wingo@pobox.com>
+Cameron Hutchison <camh@xdna.net>
