--- a/gst-plugins-good/AUTHORS
+++ b/gst-plugins-good/AUTHORS
@@ -12,3 +12,4 @@ Bastien Nocera <hadess@hadess.net>
 Christian Fredrik Kalager Schaller <Uraeus@linuxrising.org>
 Thomas Vander Stichele <thomas@apestaart.org>
 Andy Wingo <wingo@pobox.com>
+Cameron Hutchison <camh@xdna.net>
