--- a/gstreamer/tools/gst-launch.1
+++ b/gstreamer/tools/gst-launch.1
@@ -117,6 +117,6 @@ Add directories separated with ':' to the plugin search path
 .SH "SEE ALSO"
 .BR gst\-complete (1),
 .BR gst\-register (1),
-.BR gst\-inspect (1),
+.BR gst\-inspect (1)
 .SH "AUTHOR"
 The GStreamer team at http://gstreamer.net/
