--- a/gst-plugins-base/sys/v4l/TODO
+++ b/gst-plugins-base/sys/v4l/TODO
@@ -1,5 +1,7 @@
 TODO list (short term):
 =======================
+* fix clocking issues by using gst clock for v4lsrc and by using it
+    as a correction for v4lmjpegsrc/v4l2src
 * v4lsrc/v4lmjpegsrc/v4l2src: fix interlacing (not handled at all...)
 
 TODO list (long term):
