Fix some inconsistencies and missing flags
Original commit message from CVS:
Fix some inconsistencies and missing flags

--- a/gstreamer/tools/gst-launch.1
+++ b/gstreamer/tools/gst-launch.1
@@ -99,6 +99,15 @@ create a PIPELINE\-DESCRIPTION.
 .B  \-\-help
 Print help synopsis and available FLAGS
 .TP 8
+.B  \-\-silent
+Do not output status information
+.TP 8
+.B  \-\-exclude=TYPE, \-XTYPE
+Do not output status information of TYPE
+.TP 8
+.B  \-\-output=FILE, \-oFILE
+Save XML representation of pipeline to FILE and exit
+.TP 8
 .B  \-\-gst\-info\-mask=FLAGS
 \fIGStreamer\fP info flags to set (list with \-\-help)
 .TP 8
