--- a/gst-plugins-bad/ChangeLog
+++ b/gst-plugins-bad/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-25  Colin Walters  <walters@debian.org>
+
+	* ext/gnomevfs/gstgnomevfssrc.c (gst_gnomevfssrc_received_headers_callback):
+	Test for url in correct variable.
+
 2002-11-17  Ken MacLeod  <ken@bitsko.slc.ut.us>
 
 	* gst/modplug/modplug_types.cc: Renamed from
