Make factual and grammatical corrections to man pages.  Add simple description of pipelines.
Original commit message from CVS:
Make factual and grammatical corrections to man pages.  Add simple
description of pipelines.

--- a/gstreamer/tools/gst-complete.1
+++ b/gstreamer/tools/gst-complete.1
@@ -8,9 +8,10 @@ gst\-complete - do bash completion for gst\-launch command\-lines
 \fIgst\-complete\fP is a utility enabling bash to provide
 context sensitive tab completion for \fIgst\-launch\fP command\-lines.
 .
-See other docs for the syntax of \fIgst\-launch\fP command\-lines.
+See the man page for \fIgst\-launch\fP for the syntax of \fIgst\-launch\fP
+command\-lines.
 .
-You must have a version of bash which supports Programmable Completion.
+You must have a version of bash which supports programmable completion.
 Versions of bash which support this provide the \fIcomplete\fP builtin
 command.
 .
